# Rosea

./: AGENTS.md  CHANGELOG.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml  release.yaml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.tauri/: myapp.key  myapp.key.pub
scripts/: changelog.mjs
src/: App.css  App.scss  App.tsx  index.css  main.tsx  pages.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.devbuild.json  tauri.conf.json  tauri.devbuild.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  lib.rs
src/app/: global.css  layout.tsx  page.tsx  styles.module.css
src/app/components/: winButton.tsx
src/app/random/: page.css  page.tsx
src/app/scripts/: config.tsx
src/app/settings/: input.tsx  page.tsx
src/assets/: global.scss
src/canvas/: canvas.scss  canvas.tsx  main.tsx
src/canvas/workers/: drawWorker.ts  inputWorker.ts
src/init/: pages.ts  tray.ts  update.ts
src/menu/: index.html  main.tsx  menu.scss  menu.tsx
src/menu/components/eraser/: earser.tsx
src/menu/components/pen/: pen.tsx
src/randomer/: config.ts  index.html  main.tsx  randomer.css  randomer.module.scss  randomer.scss  randomer.tsx
src/randomer/settings/: index.html  main.tsx  settings.css  settings.module.scss  settings.scss  settings.tsx
src/update/: index.html  main.tsx  update.css  update.scss  update.tsx
